--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -47,7 +47,8 @@ library internal
                    Control.LinearlyVersionedMonad
   build-depends:   constraints >= 0.13,
                    deepseq >= 1.5,
-                   linear-base >= 0.3.1
+                   linear-base >= 0.3.1,
+                   eth-abi
 
 library
   import:             basic-options
