--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -37,14 +37,16 @@ common basic-options
                         LinearTypes
   build-depends:        base >= 4.20.0.0 && < 666
 
-library internal
+library lvm
   import:     basic-options
   visibility: private
   --
-  hs-source-dirs:  internal-src
-  exposed-modules: Data.MPOrd
-                   Data.LinearContext
+  hs-source-dirs:  ./internal/lvm
+  exposed-modules: Data.LinearContext
                    Control.LinearlyVersionedMonad
+                   Control.LinearlyVersionedMonad.Combinators
+                   -- support linear types for constraints package
+                   Data.Constraint.Linear
   build-depends:   constraints >= 0.13,
                    deepseq >= 1.5,
                    linear-base >= 0.3.1,
@@ -55,25 +57,28 @@ library
   default-extensions: TypeFamilies
                       RequiredTypeArguments
   --
-  hs-source-dirs:   src
+  hs-source-dirs:     src
   exposed-modules:    Prelude.YulDSL
-                      -- Instances for YulDSL
-                      Data.MPOrd.YulDSL
-                      Control.Category.Constrained.YulDSL
-                      -- Instances for YulDSL's LinearSMC Effect
+                      -- YulDSL's LinearSMC Effect
                       YulDSL.Effects.LinearSMC.YulPort
                       YulDSL.Effects.LinearSMC.YulMonad
                       YulDSL.Effects.LinearSMC.LinearYulCat
                       YulDSL.Effects.LinearSMC.LinearFn
                       YulDSL.Effects.LinearSMC
-                      -- Prelude Curation for LinearSMC
-                      Data.Num.YulDSL.LinearSMC
-  reexported-modules: Control.LinearlyVersionedMonad
+                      -- YulDSL's linear-smc instances
+                      Control.Category.Constrained.YulDSL
+                      -- Prelude curation
+                      Data.MPOrd
+                      Data.MPOrd.YulDSL
+                      Data.Num.YulDSL
+  reexported-modules: Data.LinearContext,
+                      Control.LinearlyVersionedMonad,
+                      Control.LinearlyVersionedMonad.Combinators
   build-depends:    constraints >= 0.13,
                     linear-base >= 0.3.1,
                     linear-smc >= 2.2.3,
                     yul-dsl,
-                    internal
+                    lvm
 
 Test-Suite test-yul-dsl-linear-smc
   import:           basic-options
