flake: add solc.nix and use 0.8.28 by default

--- a/.envrc
+++ b/.envrc
@@ -5,3 +5,7 @@ dotenv_if_exists || direnv status # https://direnv.net/man/direnv-stdlib.1.html
 # use flake shell
 # Note: to save your disk space, you may override nixpkgs with the preferred locked version on your machine
 use flake . ${FLAKE_OVERRIDE_NIXPKGS:+--override-input nixpkgs "${FLAKE_OVERRIDE_NIXPKGS}"}
+
+# foundry to use solc.nix provided solc
+export FOUNDRY_OFFLINE=true
+export FOUNDRY_SOLC_VERSION=`which solc-0.8.28`
