--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -29,6 +29,7 @@ build-type:     Simple
 
 common basic-options
   default-language:   GHC2024
+  default-extensions: OverloadedRecordDot
   ghc-options:        -Wall
                       -Wunused-packages
   build-depends:      base >= 4.20.0.0 && < 666
@@ -50,10 +51,13 @@ library
                     YulDSL.Eval
                     YulDSL.CodeGens.YulGen
   other-modules:    YulDSL.CodeGens.Yul.Internal.CodeFormatters
+                    YulDSL.CodeGens.Yul.Internal.Variables
                     YulDSL.CodeGens.Yul.Internal.CodeGen
                     YulDSL.CodeGens.Yul.Internal.ABICodecGen
                     YulDSL.CodeGens.Yul.Internal.FunctionGen
                     YulDSL.CodeGens.Yul.Internal.ObjectGen
+                    YulDSL.CodeGens.Yul.Internal.BuiltInRegistra
+                    YulDSL.CodeGens.Yul.Internal.BuiltIns
   build-depends:    eth-abi ^>= 0.1.0.0,
                     constraints >= 0.14,
                     bytestring >= 0.11,
