--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -40,6 +40,7 @@ library
   --
   hs-source-dirs:   src
   exposed-modules:  Control.PatternMatchable
+                    Control.IfThenElse
                     YulDSL.Core.YulCatObj
                     YulDSL.Core.YulNum
                     YulDSL.Core.YulCat
