--- a/hs-pkgs/yol-suite/testsuite/yol-testsuite.cabal
+++ b/hs-pkgs/yol-suite/testsuite/yol-testsuite.cabal
@@ -32,5 +32,5 @@ common yol-module-options
 library
   import:           yol-module-options
   exposed-modules:  Project
-                    ObjectDispatcherTests
+                    Num_Tests
   hs-source-dirs:   src
