--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -59,6 +59,9 @@ library
                     YulDSL.CodeGens.Yul.Internal.FunctionGen
                     YulDSL.CodeGens.Yul.Internal.ObjectGen
                     YulDSL.CodeGens.Yul.Internal.BuiltInRegistra
+                    YulDSL.CodeGens.Yul.Internal.BuiltIns.Runtime
+                    YulDSL.CodeGens.Yul.Internal.BuiltIns.ValueType
+                    YulDSL.CodeGens.Yul.Internal.BuiltIns.Arithmetic
                     YulDSL.CodeGens.Yul.Internal.BuiltIns
   build-depends:    eth-abi ^>= 0.1.0.0,
                     constraints >= 0.14,
