refactored YulDSL/Effects/LinearSMC

--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -52,6 +52,8 @@ library
                       YulDSL.Effects.LinearSMC.YulMonad
                       YulDSL.Effects.LinearSMC.LinearYulCat
                       YulDSL.Effects.LinearSMC.LinearFn
+                      YulDSL.Effects.LinearSMC.Impurable
+                      YulDSL.Effects.LinearSMC.Storage
                       YulDSL.Effects.LinearSMC
                       -- YulDSL's linear-smc instances
                       Control.Category.Constrained.YulDSL
