Fixed YulEmb related bugs

--- a/examples/demo/yol-demo.cabal
+++ b/examples/demo/yol-demo.cabal
@@ -38,5 +38,6 @@ common yol-module-options
 
 library
   import:           yol-module-options
-  exposed-modules:  Project Basic ERC20
+  exposed-modules:  ERC20
+                    Project
   hs-source-dirs:   src
