cleaned up a few things in yol-suite

--- a/cabal.project
+++ b/cabal.project
@@ -7,7 +7,9 @@ packages:
   hs-pkgs/yol-suite/testsuite
   examples/demo
 
+-- doc: https://cabal.readthedocs.io/en/stable/cabal-commands.html#cmdoption-enable-multi-repl
 multi-repl: true
 
 package linear-smc
+  -- we don't want this external package to spew warnings out
   ghc-options: -Wno-all
