--- a/hs-pkgs/eth-abi/eth-abi.cabal
+++ b/hs-pkgs/eth-abi/eth-abi.cabal
@@ -48,6 +48,7 @@ library
                       Data.TupleN
   build-depends:      bytestring >= 0.11,
                       template-haskell >= 2.22,
+                      constraints >= 0.13,
                       crypton >= 0.32,
                       memory >= 0.18,
                       cereal >= 0.5,
