BYTESn/ADDR type completion; sget/sput/REF type refactored; HMAP next

--- a/hs-pkgs/eth-abi/eth-abi.cabal
+++ b/hs-pkgs/eth-abi/eth-abi.cabal
@@ -39,6 +39,7 @@ library
                       Ethereum.ContractABI.CoreType.INTx
                       Ethereum.ContractABI.CoreType.BYTESn
                       Ethereum.ContractABI.ABITypeCoercible
+                      Ethereum.ContractABI.ExtendedType.REF
                       Ethereum.ContractABI.ExtendedType.TUPLEn
                       Ethereum.ContractABI.ExtendedType.SELECTOR
                       Ethereum.ContractABI
