--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -64,8 +64,11 @@ library
                     YulDSL.CodeGens.Yul.Internal.BuiltIns.ABICodec
                     YulDSL.CodeGens.Yul.Internal.BuiltIns
   build-depends:    eth-abi ^>= 0.1.0.0,
+                    template-haskell >= 2.22,
                     constraints >= 0.14,
                     bytestring >= 0.11,
+                    crypton >= 0.32,
+                    memory >= 0.18,
                     text >= 2.0.1,
                     containers >= 0.6.7,
                     mtl >= 2.3.1
@@ -73,6 +76,7 @@ library
 Test-Suite test-yul-dsl
   import:             basic-options
   default-extensions: BlockArguments
+                      TemplateHaskell
   ghc-options:        -Wno-missing-signatures
   --
   type:             exitcode-stdio-1.0
